force-app/main/default/objects/DnB_API_Settings__c/fields/Authentication_URL__c.field-meta.xml
<CustomField>
    <fullName>Authentication_URL__c</fullName>
    <label>Authentication URL</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>