force-app/main/default/objects/DnB_API_Settings__c/fields/Company_Profile_URL__c.field-meta.xml
<CustomField>
    <fullName>Company_Profile_URL__c</fullName>
    <label>Company Profile URL</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>