force-app/main/default/objects/DnB_API_Settings__c/fields/DnB_API_Token__c.field-meta.xml
<CustomField>
    <fullName>DnB_API_Token__c</fullName>
    <label>D&amp;B API Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>