force-app/main/default/objects/DnB_API_Settings__c/fields/DnB_API_Token_Expiration__c.field-meta.xml
<CustomField>
    <fullName>DnB_API_Token_Expiration__c</fullName>
    <label>D&amp;B API Token Expiration</label>
    <type>DateTime</type>
</CustomField>