force-app/main/default/objects/DnB_API_Settings__c/fields/Identity_Resolution_URL__c.field-meta.xml
<CustomField>
    <fullName>Identity_Resolution_URL__c</fullName>
    <label>Identity Resolution URL</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>