force-app/main/default/objects/DnB_API_Settings__c/fields/Lead_Minimum_Confidence_Code__c.field-meta.xml
<CustomField>
    <fullName>Lead_Minimum_Confidence_Code__c</fullName>
    <label>Lead Minimum Confidence Code</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>